POM: update JUnit